Touch-Ups Feb7th-2022

--- a/aboutme.css
+++ b/aboutme.css
@@ -16,7 +16,7 @@
   background-image: url(pics/CZIII_ProfessionalPicCropped.JPG);
 }
 .bigimg-3 {
-  background-image: url(pics/bryanpic4-3.jpg);
+  background-image: url(pics/HomepagePicCrop1.jpg);
   background-position: center top;
   
 }
